gettext-macros/tests/ui/dgettext/missing_msgid.rs
use gettext_macros::*;

fn main() {
    dgettext!("domainname");
    dgettext!("domainname", 1, 2);
}
